--- a/.github/workflows/validate_json.yml
+++ b/.github/workflows/validate_json.yml
@@ -1,8 +1,10 @@
+name: Validate studios JSON file
+
 on:
   pull_request:
     branches:
       - master
-name: Pull request workflow
+
 jobs:
   validate_configurations:
     name: Validate configurations
@@ -13,5 +15,5 @@ jobs:
         uses: snapcart/json-schema-validator@v1.0.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          json_schema: /.github/studios.schema.json
-          json_path_pattern: /.studios.json$
+          json_schema: .github/studios.schema.json
+          json_path_pattern: .studios.json$
