--- a/.github/workflows/validate_json.yml
+++ b/.github/workflows/validate_json.yml
@@ -11,9 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Validate BigQuery schema
+      - name: Validate studios.json
         uses: snapcart/json-schema-validator@v1.0.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           json_schema: .github/studios.schema.json
-          json_path_pattern: .studios.json$
+          json_path_pattern: studios.json
