Rework JSON validation

--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -35,7 +35,7 @@ jobs:
         run: cd dist; zip -r -D ../release.zip *; cd ..
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          repo_token: "${{ secrets.GH_TOKEN }}"
           automatic_release_tag: "latest"
           prerelease: false
           files: |
