--- a/.github/workflows/validate_json.yml
+++ b/.github/workflows/validate_json.yml
@@ -14,6 +14,6 @@ jobs:
       - name: Validate studios.json
         uses: snapcart/json-schema-validator@v1.0.0
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.JF_BOT_TOKEN }}
           json_schema: .github/studios.schema.json
           json_path_pattern: studios/.*/studio.json$
